Pushing to github

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
 .App {
   text-align: center;
+  /* background: rgb(27,30,34);
+  background: radial-gradient(rgba(48,68,80,1) 0%, rgba(27,30,34,1) 100%); */
+  height: 100vh;
+  padding: 10vh 20vw;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.column {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.margin10 {
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.marginBottom10 {
+  margin-bottom: 10px;
+}
+
+.padding10 {
+  padding: 10px;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
